<resources>
    !-- Nombre de la aplicacion -->
    <string name="app_name">proyecto_moviles</string>

    !-- Text del Login -->
    <string name="olvido">¿Olvidó su contrasña?</string>
    <string name="BinvenidoLogin">Binvenido</string>
    <string name="informacion">Por favor ingrese su informacion</string>
    <string name="correo">Correo Electronico</string>
    <string name="contra">Contraseña</string>
    <string name="RecondarContra">Recordar Ccntraseña</string>

    !-- Text del sign up -->
    <string name="fullName">Nombre completo</string>
    <string name="Recontra">Repite la Contraseña</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="grado">Grado Escolar</string>

    !-- Text del main Activity -->
    <string name="welcome_message">Bienvenido a nuestra emocionante aplicación dedicada a la fascinante disciplina de la biología.</string>
    <string name="start_button_label">Comenzar</string>
    <string name="welcome_image_description">Imagen de bienvenida</string>
    <string name="default_web_client_id">186541561201-9u0d0rhhir70esg0rjmckqv18ecpg9ha.apps.googleusercontent.com</string>
</resources>