<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.LoginActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.4"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="32sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        android:id="@+id/card_view"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BinvenidoLogin"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/correo"/>

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/contra" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/rbtSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RecondarContra"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/olvido"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:text="Login"
                android:textSize="35dp"
                android:textStyle="bold"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/google"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Continuar con google"
                    android:textSize="30dp"></TextView>


            </LinearLayout>

            <TextView
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/registrarse" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

